# MetaAudio

./: .gitmodules  CMakeLists.txt  MetaHookSv.props  README.md
.github/workflows/: livebuild.yml  release.yml
include/: exportfuncs.h  plugins.h  snd_local.h
msvc/: Directory.build.targets  MetaHookSv.props
scripts/: build-MetaAudio-x86-Debug.bat  build-MetaAudio-x86-Release.bat
src/: AudioEngine.cpp  exportfuncs.cpp  metaaudio.cpp  snd_hook.cpp
src/Effects/: EnvEffects.cpp
src/Loaders/: SoundLoader.cpp
src/Utilities/: AudioCache.cpp  ChannelManager.cpp
src/Vox/: VoxManager.cpp
